--- a/index.html
+++ b/index.html
@@ -410,15 +410,15 @@ Kedua, setelah analisis naratif selesai, Identifikasi ${jumlahRisiko} Risiko Uta
 - **RISK ID**: Buat kode unik, contoh: RO-001.
 - **UNIT KERJA & NAMA RISK OWNER**: Isi dengan "${unitKerja}" dan "${namaLengkap}".
 - **SASARAN & KEGIATAN**: Jabarkan dari deskripsi proses bisnis.
-- **SUMBER RISIKO**: Pilih salah satu: Internal, Eksternal, Internal & Eksternal.
-- **KATEGORI RISIKO**: Pilih salah satu: Risiko Asuransi, Risiko Hukum, Risiko Kepatuhan, Risiko Kredit, Risiko Likuiditas, Risiko Operasional, Risiko Pasar, Risiko Reputasi, Risiko Strategis.
-- **KATEGORI PENYEBAB RISIKO**: Pilih salah satu: SDM, Sistem/IT, Prosedur, Eksternal.
+- **SUMBER RISIKO**: Pilih satu jawaban: Internal, Eksternal, Internal & Eksternal.
+- **KATEGORI RISIKO**: Pilih satu jawaban: Risiko Asuransi, Risiko Hukum, Risiko Kepatuhan, Risiko Kredit, Risiko Likuiditas, Risiko Operasional, Risiko Pasar, Risiko Reputasi, Risiko Strategis.
+- **KATEGORI PENYEBAB RISIKO**: Pilih satu jawaban: SDM, Sistem/IT, Prosedur, Eksternal.
 - **ESTIMASI BIAYA**: Berikan angka perkiraan dalam Rupiah (contoh: 50.000.000).
 - **ASESMEN KEMUNGKINAN & DAMPAK**: Gunakan skala angka 1 sampai 5.
 - **SKOR & PERINGKAT**: Hitung (Kemungkinan x Dampak) dan tentukan peringkatnya (RENDAH, SEDANG RENDAH, SEDANG, SEDANG TINGGI, SANGAT TINGGI). **Hanya tuliskan angka skor di kolom SKOR dan teks peringkat di kolom PERINGKAT.**
 - **TGL. ASESMEN**: Gunakan tanggal hari ini (${today}).
-- **EVALUASI EXISTING CONTROL**: Pilih salah satu: Efektif, Kurang efektif, Tidak efektif.
-- **PERLAKUAN RISIKO**: Pilih salah satu: Accept, Share, Transfer, Reduce, Avoid.
+- **EVALUASI EXISTING CONTROL**: Pilih satu jawaban: Efektif, Kurang efektif, Tidak efektif.
+- **PERLAKUAN RISIKO**: Pilih salah jawaban: Accept (Diterima), Share (Dibagi), Transfer (Dialihkan), Reduce (Dikurangi), Avoid (Dihindari).
 - **TARGET PELAKSANAAN MITIGASI**: Berikan tanggal di masa depan (DD/MM/YYYY).
 `;
                 
@@ -594,5 +594,6 @@ Kedua, setelah analisis naratif selesai, Identifikasi ${jumlahRisiko} Risiko Uta
 
 </body>
 </html>
+
 
 
