--- a/index.html
+++ b/index.html
@@ -422,8 +422,10 @@ Kedua, setelah analisis naratif selesai, Identifikasi ${jumlahRisiko} Risiko Uta
 - **TARGET PELAKSANAAN MITIGASI**: Berikan tanggal di masa depan (DD/MM/YYYY).
 `;
                 
-                const apiKey = "AIzaSyArKl3D8j7U9-a8euSFxRNwZ-PJItAsS8s"; 
-                const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
+                const apiKey = "AIzaSyDvMr8A7QPGGTYPuYpLDkJf0IUkRkJlFho";
+
+const apiUrl =
+`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${apiKey}`;
                 
                 let response;
                 let retries = 0;
@@ -594,3 +596,4 @@ Kedua, setelah analisis naratif selesai, Identifikasi ${jumlahRisiko} Risiko Uta
 
 </body>
 </html>
+
